--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "devDependencies": {
     "browser-sync": "^2.17.0",
     "gulp": "^3.9.1",
+    "gulp-html-replace": "^1.6.1",
     "gulp-inject": "^4.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
-    "gulp-useref": "^3.1.2"
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
+    "gulp-using": "^0.1.1"
   },
   "main": "gulpfile.js",
   "dependencies": {
