--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django==1.9
-django-bootstrap-markdown-editor==1.3.1
+Django==1.10.5
 django-markdown==0.8.4
-Markdown==2.6.5
+django-tagging==0.4.5
+django-sslserver==0.19
 Pillow==3.1.0
 requests==2.8.1
 simplejson==3.8.1
 wheel==0.26.0
+
