--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.10.5
 django-markdown==0.8.4
 django-tagging==0.4.5
 django-sslserver==0.19
+django-imagekit==3.3
 requests==2.8.1
 simplejson==3.8.1
 wheel==0.26.0
